Good start, trying to fix number input on firefox

--- a/investment-calculator/src/components/InvestmentForm/Form.module.css
+++ b/investment-calculator/src/components/InvestmentForm/Form.module.css
@@ -57,3 +57,11 @@ button:hover {
   background: transparent;
   color: #91e1d0;
 }
+
+p.invalid {
+  color: red;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
+  background-color: #fff3;
+}
